# ProofLoom

./: .gitignore  CONTEXT.md  README.md  proofloom.example.json  pyproject.toml
.codex/: config.toml
.codex/agents/: issue-executor-deep.toml  issue-executor.toml  read-scout.toml
docs/: PRD-ProofLoom-v0.1.md  工程标准知识库：知识图谱与 LLM Wiki 技术路线.md
docs/adr/: 0001-separate-assertion-ledger-from-query-graph.md  0002-product-is-an-ai-learning-workspace.md  0003-do-not-distribute-harness-source-material.md
docs/agents/: domain.md  issue-tracker.md
examples/synthetic-workflow/: inspection.md  safety.md
src/proofloom/: __init__.py  app.py  assertions.py  configuration.py  entities.py  graphs.py  release.py  reviews.py  sources.py
src/proofloom/fixtures/: synthetic-extraction.json
src/proofloom/schemas/: candidate-assertion.schema.json  entity-dictionary.schema.json  ledger-assertion.schema.json  query-graph.schema.json  review-event.schema.json  source-fragment.schema.json
tests/: test_api_extraction.py  test_assertion_review_ui.py  test_entity_dictionary_ui.py  test_fixture_extraction.py  test_graph_projection_ui.py  test_project_ui.py  test_readme_commands.py  test_release_integrity.py  test_runtime_config.py  test_source_import_ui.py  test_source_invalidation.py  test_synthetic_demo.py
