[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proofloom"
version = "0.1.0"
description = "Local-first, evidence-grounded AI learning workspace"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.18,<5"]

[project.scripts]
proofloom = "proofloom.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proofloom = ["schemas/*.json", "fixtures/*.json"]
